<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ffffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:src="@mipmap/finish" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/deleteView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/delete_sign_100"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:id="@+id/blacklineView"
        android:src="@mipmap/dot_black"
        android:layout_below="@+id/deleteView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:scaleType="fitXY" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mailView"
        android:src="@mipmap/mail"
        android:layout_alignBottom="@+id/rend_setView"
        android:layout_toLeftOf="@+id/nextView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/deleteView"
        android:layout_toEndOf="@+id/deleteView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="送信設定"
        android:id="@+id/rend_setView"
        android:textSize="70px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:id="@+id/grayView"
        android:src="@mipmap/dot_gray"
        android:scaleType="fitXY"
        android:layout_below="@+id/mailView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mail"
        android:id="@+id/mailView2"
        android:textSize="75px"
        android:layout_below="@+id/blacklineView"
        android:layout_centerHorizontal="true"
        android:textColor="#ff000000" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="85px"
        android:id="@+id/userText"
        android:layout_below="@+id/grayView"
        android:layout_alignRight="@+id/grayView"
        android:layout_alignEnd="@+id/grayView"
        android:text="ユーザー名"
        android:textSize="50px"
        android:textColor="#9D9D9D"
        android:hint="@string/userhinttext"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:id="@+id/graylineView2"
        android:src="@mipmap/dot_gray"
        android:scaleType="fitXY"
        android:baselineAlignBottom="false"
        android:layout_below="@+id/userText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:id="@+id/graylineView2"
        android:src="@mipmap/dot_gray"
        android:scaleType="fitXY"
        android:layout_below="@+id/passText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:id="@+id/graylineView4"
        android:src="@mipmap/dot_gray"
        android:scaleType="fitXY"
        android:layout_below="@+id/serverText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25px"
        android:id="@+id/graylineView5"
        android:src="@mipmap/dot_gray"
        android:scaleType="fitXY"
        android:layout_below="@+id/portText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="85px"
        android:id="@+id/passText"
        android:layout_below="@+id/graylineView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="パスワード"
        android:textSize="50px"
        android:textColor="#9D9D9D"
        android:hint="@string/passhinttext"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="85px"
        android:id="@+id/serverText"
        android:layout_below="@+id/graylineView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="サーバー"
        android:textColor="#9D9D9D"
        android:textSize="50px"
        android:hint="@string/serverhinttext"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="85px"
        android:id="@+id/portText"
        android:layout_below="@+id/graylineView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="ポート"
        android:textColor="#9D9D9D"
        android:textSize="50px"
        android:hint="@string/porthinttext"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="90px"
        android:id="@+id/secspinner"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ff000000"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="70px"
        android:text="セキュリティ"
        android:id="@+id/textView"
        android:layout_below="@+id/graylineView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="50px"
        android:textColor="#ff000000" />

</RelativeLayout>